--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-python-dotenv
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
+aiofiles==23.2.1
+jinja2==3.1.2
+python-dotenv==1.0.0
 openai
 moviepy
 google-api-python-client
 google-auth-oauthlib
-fastapi
-python-multipart
-uvicorn
-aiohttp
 requests
 facebook-sdk
 python-instagram
