--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
-aiofiles==23.2.1
-jinja2==3.1.2
+python-dotenv==1.0.0
+openai==1.3.5
+moviepy==1.0.3
+google-api-python-client==2.108.0
+google-auth-oauthlib==1.1.0
+python-instagram==1.3.2
+tiktok-api==0.1.0
+pydantic==2.5.2
+sqlalchemy==2.0.23
+alembic==1.12.1
+pytest==7.4.3
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.0.1
+aiohttp==3.9.1
+python-dateutil==2.8.2
