--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ uvicorn==0.24.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
 openai==1.3.5
+google-cloud-videointelligence==2.11.4
+google-cloud-storage==2.13.0
 moviepy==1.0.3
 google-api-python-client==2.108.0
 google-auth-oauthlib==1.1.0
