--- a/.env.example
+++ b/.env.example
@@ -1,57 +1,62 @@
-# General Settings
-DEBUG=True
-SECRET_KEY=your-secret-key-here
-ALLOWED_HOSTS=localhost,127.0.0.1
-PORT=5000
-
 # API Settings
 API_V1_STR=/api/v1
 PROJECT_NAME="Social Media Upload API"
 
+# Application Settings
+APP_NAME=Social Media Automation
+DEBUG=True
+LOG_LEVEL=INFO
+
 # Security
+SECRET_KEY=your_secret_key_here  # Used for token encryption
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=60
-CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
-CSRF_ENABLED=True
+ACCESS_TOKEN_EXPIRE_MINUTES=60  # JWT token expiration
 
-# OpenAI (ChatGPT)
-OPENAI_API_KEY=your-openai-api-key
+# OpenAI (ChatGPT) Settings
+OPENAI_API_KEY=your_openai_api_key
+OPENAI_MODEL=gpt-4  # or gpt-3.5-turbo
 
-# YouTube API Credentials
+# Google Cloud
+GOOGLE_CLOUD_PROJECT=your-project-id
+GCP_BUCKET_NAME=your-bucket-name
+GOOGLE_APPLICATION_CREDENTIALS=path/to/service-account-key.json
+
+# YouTube Credentials
 YOUTUBE_CLIENT_ID=your-youtube-client-id
 YOUTUBE_CLIENT_SECRET=your-youtube-client-secret
-YOUTUBE_PERSONAL_REFRESH_TOKEN=your-personal-refresh-token
-YOUTUBE_CHARITY_REFRESH_TOKEN=your-charity-refresh-token
+YOUTUBE_PERSONAL_CLIENT_ID=your_personal_client_id
+YOUTUBE_PERSONAL_CLIENT_SECRET=your_personal_client_secret
+YOUTUBE_CHARITY_CLIENT_ID=your_charity_client_id
+YOUTUBE_CHARITY_CLIENT_SECRET=your_charity_client_secret
 
-# Instagram API Credentials
+# Instagram API App Credentials
 INSTAGRAM_APP_ID=your-instagram-app-id
 INSTAGRAM_APP_SECRET=your-instagram-app-secret
-INSTAGRAM_PERSONAL_ACCESS_TOKEN=your-personal-access-token
-INSTAGRAM_PERSONAL_USER_ID=your-personal-user-id
-INSTAGRAM_CHARITY_ACCESS_TOKEN=your-charity-access-token
-INSTAGRAM_CHARITY_USER_ID=your-charity-user-id
+INSTAGRAM_PERSONAL_ACCESS_TOKEN=your_personal_access_token
+INSTAGRAM_PERSONAL_USER_ID=your_personal_user_id
+INSTAGRAM_CHARITY_ACCESS_TOKEN=your_charity_access_token
+INSTAGRAM_CHARITY_USER_ID=your_charity_user_id
 
-# TikTok API Credentials
-TIKTOK_APP_KEY=your-tiktok-app-key
-TIKTOK_APP_SECRET=your-tiktok-app-secret
-TIKTOK_PERSONAL_ACCESS_TOKEN=your-personal-access-token
-TIKTOK_CHARITY_ACCESS_TOKEN=your-charity-access-token
+# TikTok API App Credentials
+TIKTOK_APP_KEY=your_app_key
+TIKTOK_APP_SECRET=your_app_secret
+TIKTOK_PERSONAL_CLIENT_KEY=your_personal_client_key
+TIKTOK_PERSONAL_CLIENT_SECRET=your_personal_client_secret
+TIKTOK_PERSONAL_ACCESS_TOKEN=your_personal_access_token
+TIKTOK_CHARITY_CLIENT_KEY=your_charity_client_key
+TIKTOK_CHARITY_CLIENT_SECRET=your_charity_client_secret
+TIKTOK_CHARITY_ACCESS_TOKEN=your_charity_access_token
 
-# Upload Settings
-MAX_UPLOAD_SIZE=512MB
-TEMP_UPLOAD_DIR=./uploads
-ALLOWED_VIDEO_FORMATS=mp4,mov
-DEFAULT_VIDEO_QUALITY=high
+# File Upload Settings
+MAX_UPLOAD_SIZE=512MB  # Maximum file size for uploads
+TEMP_UPLOAD_DIR=./uploads  # Directory for temporary files
+ALLOWED_EXTENSIONS=mp4,mov,avi,mkv  # Allowed file extensions
 
-# Retry Settings
-MAX_RETRIES=3
-RETRY_DELAY=5
-
-# Logging
-LOG_LEVEL=INFO
+# Logging Settings
+LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 LOG_FILE=app.log
 
 # Cache Settings
-CACHE_TYPE=filesystem
-CACHE_DIR=./cache
-CACHE_DEFAULT_TIMEOUT=300
+CACHE_TYPE=redis
+CACHE_REDIS_URL=redis://localhost:6379/0
+CACHE_DEFAULT_TIMEOUT=600
